# OpenCodeInterpreter

./: .gitignore  README.md
data_collection/: README.md  README_data.md
data_collection/Local-Code-Interpreter/: README.md  README_CN.md  requirements.txt  requirements_full.txt
demo/: LICENSE  README.md  chatbot.py  requirements.txt
demo/code_interpreter/: BaseCodeInterpreter.py  JupyterClient.py  OpenCodeInterpreter.py
demo/utils/: cleaner.py  const.py
evaluation/: README.md  requirements.txt
evaluation/evalplus/: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  evo.sh  pyproject.toml  release.sh  requirements-evalperf.txt  requirements-llm.txt  requirements-tools.txt  requirements.txt  setup.cfg
evaluation/evalplus/.github/ISSUE_TEMPLATE/: buggy_contract.yml  buggy_test.yml  model_eval_request.yml
evaluation/evalplus/codegen/: generate.py  model.py  requirements.txt
evaluation/evalplus/evalplus/: __init__.py  evalperf.py  evaluate.py  inputgen.py  lecacy_sanitize.py  sanitize.py  syncheck.py
evaluation/evalplus/evalplus/_experimental/: evaluate_runtime.py  generate_big_input.py  type_mut_for_eff.py
evaluation/evalplus/evalplus/data/: __init__.py  humaneval.py  mbpp.py  utils.py
evaluation/evalplus/evalplus/eval/: __init__.py  _special_oracle.py
evaluation/evalplus/evalplus/perf/: config.py  profile.py  sampling.py  sas.py  select_pe_inputs.py  select_pe_tasks.py
evaluation/evalplus/tests/: test_legacy_sanitizer.py  test_sanitizer.py  test_treesitter_sanitizer.py
evaluation/evalplus/tools/: checker.py  collect_valid_solutions.py  filter_inputs.py  merge_dataset.py  render.py  requirements.txt  sanitize.py  stat_plus.py  viz_passrate.py  zip_solutions.py
evaluation/evalplus/tools/_experimental/: README.md  evaluate_coverage.py  set_cover.py  topset_distill.py
evaluation/evalplus/tools/humaneval/: check_ground_truth.py  filter_extreme.py  fix_utils.py  fix_v011.py  fix_v012.py  fix_v013.py  fix_v014.py  fix_v015.py  fix_v016.py  fix_v017.py  fix_v018.py  fix_v019.py  init_ground_truth.py  init_plus.py  to_original_fmt.py
evaluation/evalplus/tools/mbpp/: check_ground_truth.py  filter_extreme.py  fix_v010.py  init_ground_truth.py  init_plus.py  to_original_fmt.py
evaluation/evalplus/tools/tsr/: .gitignore  README.md  __init__.py  coverage_init.py  minimization.py  mutation_init.py  requirements.txt  run.py  sample_init.py  utils.py
(+25 files in other folders)
