[metadata]
name = evalplus
description = "EvalPlus for rigourous evaluation of LLM-synthesized code"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evalplus/evalplus
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    wget>=3.2
    tempdir>=0.7.1
    multipledispatch>=0.6.0
    appdirs>=1.4.4
    numpy>=1.19.5
    tqdm>=4.56.0
    termcolor>=2.0.0

[options.entry_points]
console_scripts =
    evalplus.evaluate = evalplus.evaluate:main
    evalplus.inputgen = evalplus.inputgen:main

[options.packages.find]
exclude =
    evalplus._experimental*
